[gd_scene load_steps=4 format=2]

[ext_resource path="res://splash/Splash.gd" type="Script" id=1]
[ext_resource path="res://splash/DepthKnot_Splash.png" type="Texture" id=2]
[ext_resource path="res://splash/HeartbeatsWithTwinkle_trimmed.wav" type="AudioStream" id=3]

[node name="Splash" type="Node2D"]
script = ExtResource( 1 )

[node name="Image" type="Sprite" parent="."]
position = Vector2( 0.00012207, 0 )
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 2 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 0.175

[node name="BeatTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="BeatTimer" to="." method="_on_BeatTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
